--- a/app/styles/utilities/container.scss
+++ b/app/styles/utilities/container.scss
@@ -3,7 +3,7 @@
   height: calc(100vh - 30px);
   margin-top: 30px;
   position:relative;
-  //border: 1px solid red;
+  border: 1px solid red;
 }
 
 .bottom {
